--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, facilis officia laborum eligendi animi minus dolores velit sequi, ducimus quis ipsam dolor molestiae! Ipsum aperiam nisi, perferendis ipsa sapiente debitis nobis nulla velit dolorum.</p>
         </div>
         <div class="box">
-          <img src="Pictures\Food\4.webp" alt="">
+          <img src="Pictures\new pic\taxi.jpg" alt="">
           <h2 class="h-secondary center">Commute </h2>
           <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, facilis officia laborum eligendi animi minus dolores velit sequi, ducimus quis ipsam dolor molestiae! Ipsum aperiam nisi, perferendis ipsa sapiente debitis nobis nulla velit dolorum.</p>
         </div>
